--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -48,9 +48,10 @@ jobs:
           echo "$SINCE"
           CHANGEDFILES="$(git diff --name-only "$SINCE" HEAD | sed 's/^\.\///' | jq -R -s -c 'split("\n")[:-1]')"
           CHANGEDDIRECTORIES="$(echo $CHANGEDFILES | jq -r '.[] | select(. | startswith("src\/"))' | cut -d'/' -f2 | sort -u | sed 's/^\.\///' | jq -R -s -c 'split("\n")[:-1]')"
-          echo "$CHANGEDDIRECTORIES"
-          echo "changed-directories=$CHANGEDDIRECTORIES" >> $GITHUB_OUTPUT
+          echo "changed-files=$CHANGEDFILES"
+          echo "changed-directories=$CHANGEDDIRECTORIES"
           echo "changed-files=$CHANGEDFILES" >> $GITHUB_OUTPUT
+          echo "changed-directories=$CHANGEDDIRECTORIES" >> $GITHUB_OUTPUT
 
       - name: Find Python packages
         id: find-packages
@@ -75,11 +76,6 @@ jobs:
       actions: read
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Fetch base branches
-        run: |
-          git fetch origin main:main
-          git fetch origin ${{ github.base_ref }}:${{ github.base_ref }}
 
       - name: Install uv
         uses: astral-sh/setup-uv@445689ea25e0de0a23313031f5fe577c74ae45a1 # v6.3.0
@@ -109,55 +105,69 @@ jobs:
             sudo dpkg -L graphviz | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/graphviz/
           fi
 
-      - name: Install Bandit
+      # - name: Install Bandit
+      #   run: |
+      #     pip install --require-hashes --requirement .github/workflows/bandit-requirements.txt
+
+      # - name: Security check - Bandit
+      #   id: bandit-check
+      #   working-directory: src/${{ matrix.package }}
+      #   run: bandit -r --severity-level medium --confidence-level medium -f html -o bandit-report-${{ matrix.package }}.html -c "pyproject.toml" . || echo "status=failure" >> $GITHUB_OUTPUT
+
+      # - name: Store Bandit as Artifact
+      #   uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+      #   with:
+      #     name: bandit-report-${{ matrix.package }}.html
+      #     path: src/${{ matrix.package }}/bandit-report-${{ matrix.package }}.html
+
+      # - name: Stop on Bandit failure
+      #   if: steps.bandit-check.outputs.status == 'failure'
+      #   run: exit 1
+
+      # - name: Install dependencies
+      #   working-directory: src/${{ matrix.package }}
+      #   run: uv sync --frozen --all-extras --dev
+
+      # - name: Run tests
+      #   working-directory: src/${{ matrix.package }}
+      #   run: |
+      #     if [ -d "tests" ]; then
+      #       uv run --frozen pytest --cov --cov-branch --cov-report=term-missing --cov-report=xml:${{ matrix.package }}-coverage.xml
+      #     else
+      #       echo "No tests directory found, skipping tests"
+      #     fi
+
+      # - name: Upload coverage reports to Codecov
+      #   uses: codecov/codecov-action@18283e04ce6e62d37312384ff67231eb8fd56d24 #v5.4.3
+      #   with:
+      #     token: ${{ secrets.CODECOV_TOKEN }}
+      #     files: ${{ matrix.package }}-coverage.xml
+
+      # - name: Run pyright
+      #   working-directory: src/${{ matrix.package }}
+      #   run: uv run --frozen pyright
+
+      # - name: Run ruff format
+      #   working-directory: src/${{ matrix.package }}
+      #   run: uv run --frozen ruff format .
+
+      # - name: Run ruff check
+      #   working-directory: src/${{ matrix.package }}
+      #   run: uv run --frozen ruff check .
+
+      - name: Debug outputs
         run: |
-          pip install --require-hashes --requirement .github/workflows/bandit-requirements.txt
+          echo "changed-files: ${{ needs.detect-packages.outputs.changed-files }}"
+          echo "changed-files (raw): '${{ toJson(needs.detect-packages.outputs.changed-files) }}'"
 
-      - name: Security check - Bandit
-        id: bandit-check
-        working-directory: src/${{ matrix.package }}
-        run: bandit -r --severity-level medium --confidence-level medium -f html -o bandit-report-${{ matrix.package }}.html -c "pyproject.toml" . || echo "status=failure" >> $GITHUB_OUTPUT
-
-      - name: Store Bandit as Artifact
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
-        with:
-          name: bandit-report-${{ matrix.package }}.html
-          path: src/${{ matrix.package }}/bandit-report-${{ matrix.package }}.html
-
-      - name: Stop on Bandit failure
-        if: steps.bandit-check.outputs.status == 'failure'
-        run: exit 1
-
-      - name: Install dependencies
-        working-directory: src/${{ matrix.package }}
-        run: uv sync --frozen --all-extras --dev
-
-      - name: Run tests
-        working-directory: src/${{ matrix.package }}
+      - name: Debug changed files and directories
         run: |
-          if [ -d "tests" ]; then
-            uv run --frozen pytest --cov --cov-branch --cov-report=term-missing --cov-report=xml:${{ matrix.package }}-coverage.xml
-          else
-            echo "No tests directory found, skipping tests"
-          fi
-
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@18283e04ce6e62d37312384ff67231eb8fd56d24 #v5.4.3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ${{ matrix.package }}-coverage.xml
-
-      - name: Run pyright
-        working-directory: src/${{ matrix.package }}
-        run: uv run --frozen pyright
-
-      - name: Run ruff format
-        working-directory: src/${{ matrix.package }}
-        run: uv run --frozen ruff format .
-
-      - name: Run ruff check
-        working-directory: src/${{ matrix.package }}
-        run: uv run --frozen ruff check .
+          echo "changed-directories: ${{ needs.detect-packages.outputs.changed-directories }}"
+          echo "changed-files: ${{ needs.detect-packages.outputs.changed-files }}"
+          echo "matrix.package: ${{ matrix.package }}"
+          echo "contains(join(' ', needs.detect-packages.outputs.changed-files), 'aws_mcp_server/core/kb/'): ${{ contains(join(' ', needs.detect-packages.outputs.changed-files), 'aws_mcp_server/core/kb/') }}"
+          echo "contains(join(' ', needs.detect-packages.outputs.changed-files), 'aws_mcp_server/core/data/embeddings/'): ${{ contains(join(' ', needs.detect-packages.outputs.changed-files), 'aws_mcp_server/core/data/embeddings/') }}"
+          echo "contains(join(' ', needs.detect-packages.outputs.changed-files), 'aws_mcp_server/scripts/'): ${{ contains(join(' ', needs.detect-packages.outputs.changed-files), 'aws_mcp_server/scripts/') }}"
 
       - name: Check for existing embeddings or generate new ones if it is aws-mcp-server
         env:
