--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -48,8 +48,8 @@ jobs:
           echo "$SINCE"
           CHANGEDFILES="$(git diff --name-only "$SINCE" HEAD | sed 's/^\.\///' | jq -R -s -c 'split("\n")[:-1]')"
           CHANGEDDIRECTORIES="$(echo $CHANGEDFILES | jq -r '.[] | select(. | startswith("src\/"))' | cut -d'/' -f2 | sort -u | sed 's/^\.\///' | jq -R -s -c 'split("\n")[:-1]')"
-          echo "changed-files=$CHANGEDFILES"
-          echo "changed-directories=$CHANGEDDIRECTORIES"
+          echo "$CHANGEDDIRECTORIES"
+          echo "$CHANGEDFILES"
           echo "changed-files=$CHANGEDFILES" >> $GITHUB_OUTPUT
           echo "changed-directories=$CHANGEDDIRECTORIES" >> $GITHUB_OUTPUT
 
@@ -105,74 +105,68 @@ jobs:
             sudo dpkg -L graphviz | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/graphviz/
           fi
 
-      # - name: Install Bandit
-      #   run: |
-      #     pip install --require-hashes --requirement .github/workflows/bandit-requirements.txt
-
-      # - name: Security check - Bandit
-      #   id: bandit-check
-      #   working-directory: src/${{ matrix.package }}
-      #   run: bandit -r --severity-level medium --confidence-level medium -f html -o bandit-report-${{ matrix.package }}.html -c "pyproject.toml" . || echo "status=failure" >> $GITHUB_OUTPUT
-
-      # - name: Store Bandit as Artifact
-      #   uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
-      #   with:
-      #     name: bandit-report-${{ matrix.package }}.html
-      #     path: src/${{ matrix.package }}/bandit-report-${{ matrix.package }}.html
-
-      # - name: Stop on Bandit failure
-      #   if: steps.bandit-check.outputs.status == 'failure'
-      #   run: exit 1
-
-      # - name: Install dependencies
-      #   working-directory: src/${{ matrix.package }}
-      #   run: uv sync --frozen --all-extras --dev
-
-      # - name: Run tests
-      #   working-directory: src/${{ matrix.package }}
-      #   run: |
-      #     if [ -d "tests" ]; then
-      #       uv run --frozen pytest --cov --cov-branch --cov-report=term-missing --cov-report=xml:${{ matrix.package }}-coverage.xml
-      #     else
-      #       echo "No tests directory found, skipping tests"
-      #     fi
-
-      # - name: Upload coverage reports to Codecov
-      #   uses: codecov/codecov-action@18283e04ce6e62d37312384ff67231eb8fd56d24 #v5.4.3
-      #   with:
-      #     token: ${{ secrets.CODECOV_TOKEN }}
-      #     files: ${{ matrix.package }}-coverage.xml
-
-      # - name: Run pyright
-      #   working-directory: src/${{ matrix.package }}
-      #   run: uv run --frozen pyright
-
-      # - name: Run ruff format
-      #   working-directory: src/${{ matrix.package }}
-      #   run: uv run --frozen ruff format .
-
-      # - name: Run ruff check
-      #   working-directory: src/${{ matrix.package }}
-      #   run: uv run --frozen ruff check .
-
-      - name: Debug outputs
+      - name: Install Bandit
         run: |
-          echo "changed-files: ${{ contains(needs.detect-packages.outputs.changed-files, 'aws_mcp_server/core/kb/') }}"
-          echo "changed-files (raw): '${{ toJson(needs.detect-packages.outputs.changed-files) }}'"
+          pip install --require-hashes --requirement .github/workflows/bandit-requirements.txt
+
+      - name: Security check - Bandit
+        id: bandit-check
+        working-directory: src/${{ matrix.package }}
+        run: bandit -r --severity-level medium --confidence-level medium -f html -o bandit-report-${{ matrix.package }}.html -c "pyproject.toml" . || echo "status=failure" >> $GITHUB_OUTPUT
+
+      - name: Store Bandit as Artifact
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: bandit-report-${{ matrix.package }}.html
+          path: src/${{ matrix.package }}/bandit-report-${{ matrix.package }}.html
+
+      - name: Stop on Bandit failure
+        if: steps.bandit-check.outputs.status == 'failure'
+        run: exit 1
+
+      - name: Install dependencies
+        working-directory: src/${{ matrix.package }}
+        run: uv sync --frozen --all-extras --dev
+
+      - name: Run tests
+        working-directory: src/${{ matrix.package }}
+        run: |
+          if [ -d "tests" ]; then
+            uv run --frozen pytest --cov --cov-branch --cov-report=term-missing --cov-report=xml:${{ matrix.package }}-coverage.xml
+          else
+            echo "No tests directory found, skipping tests"
+          fi
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@18283e04ce6e62d37312384ff67231eb8fd56d24 #v5.4.3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ${{ matrix.package }}-coverage.xml
+
+      - name: Run pyright
+        working-directory: src/${{ matrix.package }}
+        run: uv run --frozen pyright
+
+      - name: Run ruff format
+        working-directory: src/${{ matrix.package }}
+        run: uv run --frozen ruff format .
+
+      - name: Run ruff check
+        working-directory: src/${{ matrix.package }}
+        run: uv run --frozen ruff check .
 
       - name: Debug changed files and directories
         run: |
           echo "changed-directories: ${{ needs.detect-packages.outputs.changed-directories }}"
-          echo "joined: ${{ join(' ', fromJson(needs.detect-packages.outputs.changed-files)) }}"
           echo "matrix.package: ${{ matrix.package }}"
-          echo "contains(join(' ', fromJson(needs.detect-packages.outputs.changed-files)), 'src/aws-mcp-server/awslabs/aws_mcp_server/core/kb/'): ${{ contains(join(' ', fromJson(needs.detect-packages.outputs.changed-files)), 'src/aws-mcp-server/awslabs/aws_mcp_server/core/kb/') }}"
-          echo "contains(join(' ', fromJson(needs.detect-packages.outputs.changed-files)), 'src/aws-mcp-server/awslabs/aws_mcp_server/core/data/embeddings/'): ${{ contains(join(' ', fromJson(needs.detect-packages.outputs.changed-files)), 'src/aws-mcp-server/awslabs/aws_mcp_server/core/data/embeddings/') }}"
-          echo "contains(join(' ', fromJson(needs.detect-packages.outputs.changed-files)), 'src/aws-mcp-server/awslabs/aws_mcp_server/scripts/'): ${{ contains(join(' ', fromJson(needs.detect-packages.outputs.changed-files)), 'src/aws-mcp-server/awslabs/aws_mcp_server/scripts/') }}"
+          echo "contains(join(' ', core/kb/'): ${{ contains(needs.detect-packages.outputs.changed-files, 'aws_mcp_server/core/kb/') }}"
+          echo "contains(join(' ', core/data/embeddings/'): ${{ contains(needs.detect-packages.outputs.changed-files, 'aws_mcp_server/core/data/embeddings/') }}"
+          echo "contains(join(' ', scripts/'): ${{ contains(needs.detect-packages.outputs.changed-files, 'aws_mcp_server/scripts/') }}"
 
-      - name: Check for existing embeddings or generate new ones if it is aws-mcp-server
+      - name: Check for existing embeddings or generate new ones for aws-mcp-server
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN}}
-        if: needs.detect-packages.outputs.changed-directories != '[]' && needs.detect-packages.outputs.changed-directories != '' && contains(needs.detect-packages.outputs.changed-directories, matrix.package) && matrix.package == 'aws-mcp-server' && (contains(join(' ', needs.detect-packages.outputs.changed-files), 'aws_mcp_server/core/kb/') || contains(join(' ', needs.detect-packages.outputs.changed-files), 'aws_mcp_server/core/data/embeddings/') || contains(join(' ', needs.detect-packages.outputs.changed-files), 'aws_mcp_server/scripts/'))
+        if: needs.detect-packages.outputs.changed-directories != '[]' && needs.detect-packages.outputs.changed-directories != '' && contains(needs.detect-packages.outputs.changed-directories, matrix.package) && matrix.package == 'aws-mcp-server' && (contains(needs.detect-packages.outputs.changed-files, 'aws_mcp_server/core/kb/') || contains(needs.detect-packages.outputs.changed-files, 'aws_mcp_server/core/data/embeddings/') || contains(needs.detect-packages.outputs.changed-files, 'aws_mcp_server/scripts/'))
         working-directory: src/${{ matrix.package }}
         run: |
           if uv run --frozen download-latest-embeddings; then
