--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -15,6 +15,7 @@ jobs:
     outputs:
       packages: ${{ steps.find-packages.outputs.packages }}
       changed-directories: ${{ steps.find-changed-directories.outputs.changed-directories }}
+      changed-files: ${{ steps.find-changed-directories.outputs.changed-files }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
@@ -32,9 +33,14 @@ jobs:
           # Pull Request against target branch sha
           # Otherwise    against latest release
           if [ "$EVENT_NAME" == "push" ]; then
-            SINCE="$EVENT_BEFORE";
+            # Handle null SHA case for new branches
+            if [ "$EVENT_BEFORE" == "0000000000000000000000000000000000000000" ]; then
+              SINCE="origin/main"
+            else
+              SINCE="$EVENT_BEFORE"
+            fi
           elif [ "$EVENT_NAME" == "pull_request" ]; then
-            SINCE="$BASE_REF";
+            SINCE="$BASE_REF"
           else
             SINCE="$(gh release list --exclude-drafts --exclude-pre-releases --limit 1 --json tagName | jq -r '.[].tagName')"
           fi;
@@ -43,6 +49,8 @@ jobs:
           CHANGEDFILES="$(git diff --name-only "$SINCE" HEAD | sed 's/^\.\///' | jq -R -s -c 'split("\n")[:-1]')"
           CHANGEDDIRECTORIES="$(echo $CHANGEDFILES | jq -r '.[] | select(. | startswith("src\/"))' | cut -d'/' -f2 | sort -u | sed 's/^\.\///' | jq -R -s -c 'split("\n")[:-1]')"
           echo "$CHANGEDDIRECTORIES"
+          echo "$CHANGEDFILES"
+          echo "changed-files=$CHANGEDFILES" >> $GITHUB_OUTPUT
           echo "changed-directories=$CHANGEDDIRECTORIES" >> $GITHUB_OUTPUT
 
       - name: Find Python packages
@@ -120,6 +128,26 @@ jobs:
         working-directory: src/${{ matrix.package }}
         run: uv sync --frozen --all-extras --dev
 
+      - name: Check for existing embeddings or generate new ones for aws-mcp-server
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+        if: needs.detect-packages.outputs.changed-directories != '[]' && needs.detect-packages.outputs.changed-directories != '' && contains(needs.detect-packages.outputs.changed-directories, matrix.package) && matrix.package == 'aws-mcp-server'
+        working-directory: src/${{ matrix.package }}
+        run: |
+          CHANGED_FILES='${{ needs.detect-packages.outputs.changed-files }}'
+          if echo "$CHANGED_FILES" | grep -q 'aws_mcp_server/core/kb/' || \
+             echo "$CHANGED_FILES" | grep -q 'aws_mcp_server/core/data/embeddings/' || \
+             echo "$CHANGED_FILES" | grep -q 'aws_mcp_server/scripts/'; then
+            uv run --frozen generate-embeddings
+          else
+            if uv run --frozen download-latest-embeddings; then
+              echo "Successfully downloaded existing embeddings"
+            else
+              echo "No matching embeddings found, generating new ones..."
+              uv run --frozen generate-embeddings
+            fi
+          fi
+
       - name: Run tests
         working-directory: src/${{ matrix.package }}
         run: |
@@ -146,19 +174,6 @@ jobs:
       - name: Run ruff check
         working-directory: src/${{ matrix.package }}
         run: uv run --frozen ruff check .
-
-      - name: Check for existing embeddings or generate new ones if it is aws-mcp-server
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN}}
-        if: needs.detect-packages.outputs.changed-directories != '[]' && needs.detect-packages.outputs.changed-directories != '' && contains(needs.detect-packages.outputs.changed-directories, matrix.package) && matrix.package == 'aws-mcp-server'
-        working-directory: src/${{ matrix.package }}
-        run: |
-          if uv run --frozen download-latest-embeddings; then
-            echo "Successfully downloaded existing embeddings"
-          else
-            echo "No matching embeddings found, generating new ones..."
-            uv run --frozen generate-embeddings
-          fi
 
       - name: Build package
         working-directory: src/${{ matrix.package }}
