--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -35,7 +35,7 @@ jobs:
           if [ "$EVENT_NAME" == "push" ]; then
             # Handle null SHA case for new branches
             if [ "$EVENT_BEFORE" == "0000000000000000000000000000000000000000" ]; then
-              SINCE="origin/main"
+              SINCE="$(git merge-base HEAD origin/main)"
             else
               SINCE="$EVENT_BEFORE"
             fi
@@ -134,14 +134,24 @@ jobs:
         if: needs.detect-packages.outputs.changed-directories != '[]' && needs.detect-packages.outputs.changed-directories != '' && contains(needs.detect-packages.outputs.changed-directories, matrix.package) && matrix.package == 'aws-api-mcp-server'
         working-directory: src/${{ matrix.package }}
         run: |
+          # Try to download latest embeddings first
+          if uv run --frozen download-latest-embeddings; then
+            DOWNLOAD_SUCCESS=true
+            echo "Successfully downloaded existing embeddings"
+          else
+            DOWNLOAD_SUCCESS=false
+            echo "Failed to download existing embeddings"
+          fi
+
           CHANGED_FILES='${{ needs.detect-packages.outputs.changed-files }}'
-          if echo "$CHANGED_FILES" | grep -q 'aws_api_mcp_server/core/kb/' || \
+          if echo "$CHANGED_FILES" | grep -q 'aws-api-mcp-server/pyproject.toml' || \
+             echo "$CHANGED_FILES" | grep -q 'aws_api_mcp_server/core/kb/' || \
              echo "$CHANGED_FILES" | grep -q 'aws_api_mcp_server/core/data/embeddings/' || \
              echo "$CHANGED_FILES" | grep -q 'aws_api_mcp_server/scripts/'; then
             uv run --frozen generate-embeddings
           else
-            if uv run --frozen download-latest-embeddings; then
-              echo "Successfully downloaded existing embeddings"
+            if [ "$DOWNLOAD_SUCCESS" = "true" ]; then
+              echo "Using previously downloaded embeddings"
             else
               echo "No matching embeddings found, generating new ones..."
               uv run --frozen generate-embeddings
